--- a/css/style.css
+++ b/css/style.css
@@ -3,8 +3,8 @@
 	font-family: 'Novecentowide-Bold';
 	src: url('../fonts/novecentowide-bold.eot');
 	src: url('../fonts/novecentowide-bold.eot?#iefix') format('embedded-opentype'),
-		 url('../fonts/novecentowide-bold.woff') format('woff'),
-		 url('../fonts/novecentowide-bold.ttf') format('truetype'),
+		 /*url('../fonts/novecentowide-bold.woff') format('woff'),*/
+		 /*url('../fonts/novecentowide-bold.ttf') format('truetype'),*/
 		 url('../fonts/novecentowide-bold.svg#novecentowide-bold') format('svg');
 	font-weight: normal;
 	font-style: normal;
@@ -47,7 +47,7 @@ a { outline: none !important; }
 
 
 /* HEADER */
-#header {
+header {
 	background: #2e343d;
 	padding: 28px 0 26px;
 	position: fixed;
@@ -176,7 +176,9 @@ article .widget-area .widget { border-right: #e9e9e9 1px dashed; }
 
 .width-33 { width: 33.1%; float: left; }
 
+.width-50 { width: 48%; float: left; }
 
+.width-67 { width: 66%; float: left; }
 
 /* PORTFOLIO & STAFF */
 .portfolio-items, .staff-items { margin: 76px 0 39px; }
@@ -215,7 +217,12 @@ article .widget-area .widget { border-right: #e9e9e9 1px dashed; }
 .client-items { margin: 78px 0 23px; }
 .client-items img { display: block; margin: 0 auto 55px; }
 
-
+.conntect-div { overflow: hidden; margin: 82px 0 75px; padding: 0; }
+.conntect-div a:hover img { opacity: 0.7; }
+.conntect-div a img {
+    margin: 44px;
+    transition: all 0.2s ease-in-out;
+}
 
 /* CONTACT */
 #map {
@@ -257,7 +264,7 @@ textarea {
 	line-height: 24px;
 	padding: 18px;
 	width: 100%;
-	text-indent: 0;	
+	text-indent: 0;
 }
 .textarea-container { margin: 0 18px; }
 .textarea-container textarea { margin-left: -18px; }
@@ -284,14 +291,14 @@ textarea {
 
 @media (min-width: 768px) and (max-width: 979px) {
 	#header nav li { margin-left: 153px; }
-	
+
 	#slider h1 { font-size: 42px; line-height: 48px; top: 34px; }
 	.flex-control-nav { bottom: 36px; }
-	
+
 	#simplemodal-overlay, #simplemodal-container { display: none !important; }
-	
+
 	.connect li { margin: 0 22px; margin-left: 118px;}
-	
+
 	#contact textarea { width: 254px; }
 }
 @media (max-width: 767px) {
@@ -316,13 +323,13 @@ textarea {
 		margin: 0;
 	}
 	.flex-control-nav { bottom: 20px; }
-	
+
 	article .widget-area { margin: 40px 0 30px; }
 	.widget-teaser .widget-title { margin-top: 16px; }
 	article .widget, .widget-teaser .widget-content, article .widget-area { border: none !important; }
-	
+
 	.width-33 { width: 100%; }
-	
+
 	.widget-teaser .widget-title { margin-bottom: 20px; }
 	.widget-teaser .widget-content { border-bottom: #e9e9e9 1px dashed; border-top: none; padding-top: 0; }
 
@@ -332,7 +339,7 @@ textarea {
 	.connect li, .connect li:first-child, .connect li:last-child { margin: 100px; display: inline-block; float: none; margin-left: 20px;}
 
 	#header nav { display: none; }
-	
+
 }
 
 @media (max-width: 480px) {
