--- a/css/jquery.gridder.demo.css
+++ b/css/jquery.gridder.demo.css
@@ -1823,22 +1823,28 @@
     display: inline-block;
     position: relative;
     cursor: pointer;
-    /*width: 32.66667%*/
+    width: 32.66667%   /* Comment this for one line grid */
 }
-/*.gridder-list:nth-child(n) {*/
-    /*margin-bottom: 1%;*/
-    /*margin-right: 1%*/
-/*}*/
-/*.gridder-list:nth-of-type(3n) {*/
-    /*margin-right: 0;*/
-    /*margin-bottom: 0*/
-/*}*/
+
+/* Comment this for one line grid */
+.gridder-list:nth-child(n) {
+    margin-bottom: 1%;
+    margin-right: 1%
+}
+.gridder-list:nth-of-type(3n) {
+    margin-right: 0;
+    margin-bottom: 0
+}
+/* Comment this for one line grid */
+
 .gridder-list .overlay {
     position: absolute;
     left: 15px;
     top: 15px;
     color: #FFF
 }
+
+
 /*.gridder-list .overlay .title {*/
     /*font-weight: 800;*/
     /*font-size: 16px*/
